// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxSnap renders 0 1`] = `
Array [
  .c0 {
  box-snap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSnap renders function 1`] = `
Array [
  .c0 {
  box-snap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSnap renders invalid theme path 1`] = `
Array [
  .c0 {
  box-snap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSnap renders negative number 1`] = `
Array [
  .c0 {
  box-snap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSnap renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-snap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-snap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-snap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-snap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-snap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-snap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-snap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-snap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-snap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-snap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-snap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-snap: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-snap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-snap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-snap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-snap: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxSnap renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    box-snap: July;
  }
}

@media April {
  .c0 {
    box-snap: August;
  }
}

@media January {
  .c0 {
    box-snap: September;
  }
}

@media April {
  .c0 {
    box-snap: November;
  }
}

@media June {
  .c0 {
    box-snap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-snap: July;
  }
}

@media April {
  .c0 {
    box-snap: August;
  }
}

@media January {
  .c0 {
    box-snap: September;
  }
}

@media April {
  .c0 {
    box-snap: November;
  }
}

@media June {
  .c0 {
    box-snap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-snap: January;
  }
}

@media April {
  .c0 {
    box-snap: December;
  }
}

@media January {
  .c0 {
    box-snap: April;
  }
}

@media April {
  .c0 {
    box-snap: May;
  }
}

@media June {
  .c0 {
    box-snap: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-snap: January;
  }
}

@media April {
  .c0 {
    box-snap: December;
  }
}

@media January {
  .c0 {
    box-snap: April;
  }
}

@media April {
  .c0 {
    box-snap: May;
  }
}

@media June {
  .c0 {
    box-snap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxSnap renders postitive number 1`] = `
Array [
  .c0 {
  box-snap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSnap renders string 1`] = `
Array [
  .c0 {
  box-snap: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSnap renders valid theme path 1`] = `
Array [
  .c0 {
  box-snap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-snap: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
